--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,28 @@
-name: CI - Build and Test
+name: CI - Build & Test
 
 on:
-    push:
-        branches: [main]
-    pull_request:
-        branches: [main]
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout repo
-            uses: actions/checkout@v4
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-            - name: Setup Node.js
-            uses: actions/setup-node@v4
-            with:
-                node-version: 20
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-            - name: Install dependencies
-            run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-            - name: Run tests
-            run: npm test --if-present
+      - name: Run tests
+        run: npm test --if-present
 
-            - name: Build Next.js app
-            run: npm run build
-
-            
-            
+      - name: Build Next.js app
+        run: npm run build
