--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "npm run build && jest --runInBand"
   },
   "dependencies": {
     "next": "16.0.0",
@@ -21,7 +21,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
+    "supertest": "^7.1.4",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.5",
     "typescript": "^5"
