--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Build, Test & Sec
+name: CI/CD - Build, Test & Push Image
 
 on:
   push:
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -23,15 +24,33 @@ jobs:
 
       - name: Run tests
         run: npm test
-      
-      - name: Build docker image
-        run: docker build -t devops-next-lab .
 
-      - name: Scan image with Trivy
+      - name: Build Docker image
+        run: docker build -t ${{ github.repository }}:${{ github.sha }} .
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Tag image
+        run: |
+          docker tag ${{ github.repository }}:${{ github.sha }} \
+            ${{ secrets.DOCKERHUB_USERNAME }}/devops-next-lab:${{ github.sha }}
+          docker tag ${{ github.repository }}:${{ github.sha }} \
+            ${{ secrets.DOCKERHUB_USERNAME }}/devops-next-lab:latest
+
+      - name: Push image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/devops-next-lab:${{ github.sha }}
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/devops-next-lab:latest
+
+      - name: Scan pushed image with Trivy
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: devops-next-lab
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/devops-next-lab:${{ github.sha }}
           format: 'table'
-          exit-code: 0
+          exit-code: '0'
           ignore-unfixed: true
           vuln-type: 'os,library'
